Updated dockerfile to use only jre now