@@ -1,5 +1,12 @@
 FROM openjdk:12-alpine
 
+RUN jlink -c --no-man-pages --no-header-files -G --module-path $JAVA_HOME/jmods --add-modules java.base,java.management,java.rmi,java.sql,java.naming --output /usr/bin/jre
+
+FROM alpine:3.8
+
+COPY --from=0 /usr/bin/jre /usr/bin/jre
+ENV JAVA_HOME /usr/bin/jre
+
 RUN apk update
 
 RUN apk add curl
